# SRFL

./: .gitignore  LICENSE  README.md  action.py  cli.py  defects.py  field.py  push_to_github.sh  pyproject.toml  pytest_shim.py  requirements.txt  run_all.py  run_oscillatory.py  run_tests.py  setup.py  test_action.py  test_defects.py  test_field.py  test_kernel.py  test_multiscale.py
.github/workflows/: ci.yml
experiments/: run_all.py  run_step.py
notebooks/: srfl_demo.ipynb
paper/: srfl_paper.tex
scripts/: generate_figures.py
src/srfl/: __init__.py  cli.py  defects.py  field.py  kernel.py  multiscale.py  swarm.py
tests/: test_action.py  test_defects.py  test_field.py  test_kernel.py  test_multiscale.py  test_swarm.py
